--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "btix",
-  "version": "1.0.0",
+  "name": "obotix-cli",
+  "version": "0.1.0",
   "description": "obotix CLI",
-  "main": "index.js",
+  "main": "bin/index.js",
+  "bin": {
+    "btix": "./bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "bin",
+    "LICENSE",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webjestic/btix.git"
@@ -20,10 +28,10 @@
     "url": "https://github.com/webjestic/btix/issues"
   },
   "homepage": "https://github.com/webjestic/btix#readme",
-  "bin": {
-    "btix": "./bin/index.js"
-  },
   "dependencies": {
+    "config": "^3.3.8",
+    "debug": "^4.3.4",
+    "shelljs": "^0.8.5",
     "yargs": "^17.5.1"
   }
 }
